--- a/modules/ROOT/pages/setup.adoc
+++ b/modules/ROOT/pages/setup.adoc
@@ -86,7 +86,7 @@ Known Limitations:
 * If a Mule application deployed to Runtime Fabric is calling a Mule application deployed to CloudHub using its DNS, the correct connection will be on the Visualizer canvas, but there will be an additional edge from the External Traffic node to the CloudHub application.
 
 
-[enable_header_injection]
+[[enable_header_injection]]
 === Enable Header Injection
 
 Visualizer requires an additional header injection to work properly for standalone Mule and Runtime Fabric deployments.
