--- a/modules/ROOT/pages/technical.adoc
+++ b/modules/ROOT/pages/technical.adoc
@@ -51,14 +51,16 @@ Visualizer requires an additional header injection to work properly for standalo
 [NOTE]
 For Runtime Fabric, you must enable header injection at the application level, while for standalone Mule deployments, you must enable the header injection at the server (not application) level. 
 
+Set the following property in either the server (for Mule standalone deployment) or application (for a Runtime Fabric deployment):
+
+----
+anypoint.platform.config.analytics.agent.header_injection.disabled=false
+----
+
 To reduce potential performance impact for applications running in a standalone Mule, you can do one of the following:
 
 * Deploy the application to a server without the Anypoint Monitoring agent installed.
 * Disable data collection for a specific server. To disable data collection for a server and all the applications deployed to that server, set the following property at the server level (not application level):
-+
-----
-anypoint.platform.config.analytics.agent.disabled=true 
-----
 +
 [NOTE]
 This disables monitoring for applications on the server as well.
