--- a/modules/ROOT/pages/technical.adoc
+++ b/modules/ROOT/pages/technical.adoc
@@ -46,21 +46,25 @@ To reduce any potential impact on performance for an application running in Clou
 
 === Reduce Potential Performance Impact for Standalone Mule and Runtime Fabric
 
-Visualizer requires an additional header injection to work properly for standalone Mule and Runtime Fabric deployments. To reduce potential performance impact for an application running in a standalone Mule 4.1.x, the header injection is disabled by default. 
+Visualizer requires an additional header injection to work properly for standalone Mule and Runtime Fabric deployments. To reduce potential performance impact for applications running in a standalone Mule 4.1.x, the header injection is disabled by default. 
 
 [NOTE]
 For Runtime Fabric, you must enable header injection at the application level, while for standalone Mule deployments, you must enable the header injection at the server (not application) level. 
 
-Set the following property in either the server (for Mule standalone deployment) or application (for a Runtime Fabric deployment):
+Set the following property: 
 
 ----
 anypoint.platform.config.analytics.agent.header_injection.disabled=false
 ----
 
-To reduce potential performance impact for applications running in a standalone Mule, you can do one of the following:
+Additionally, to reduce potential performance impact for applications running in a standalone Mule, you can do one of the following:
 
 * Deploy the application to a server without the Anypoint Monitoring agent installed.
-* Disable data collection for a specific server. To disable data collection for a server and all the applications deployed to that server, set the following property at the server level (not application level):
+* Disable data collection for a specific server. To disable data collection for a server and all the applications deployed to that server, set the following property at the server level (not application level): 
 +
+----
+anypoint.platform.config.analytics.agent.disabled=true 
+----
+
 [NOTE]
 This disables monitoring for applications on the server as well.
