--- a/modules/ROOT/pages/technical.adoc
+++ b/modules/ROOT/pages/technical.adoc
@@ -46,15 +46,15 @@ To reduce any potential impact on performance for an application running in Clou
 
 === Reduce Potential Performance Impact for Standalone Mule and Runtime Fabric
 
-Visualizer requires an additional header injection to work properly for standalone Mule and Runtime Fabric deployments. To reduce potential performance impact for applications running in a standalone Mule 4.1.x, the header injection is disabled by default. 
+Visualizer requires an additional header injection to work for standalone Mule and Runtime Fabric deployments. To reduce potential performance impact for applications running in a standalone Mule 4.1.x, the header injection is disabled by default. 
 
 [NOTE]
 For Runtime Fabric, you must enable header injection at the application level, while for standalone Mule deployments, you must enable the header injection at the server (not application) level. 
 
-Set the following property: 
+To disable the header injection for Mule 3, set the following property: 
 
 ----
-anypoint.platform.config.analytics.agent.header_injection.disabled=false
+anypoint.platform.config.analytics.agent.header_injection.disabled=true
 ----
 
 Additionally, to reduce potential performance impact for applications running in a standalone Mule, you can do one of the following:
