--- a/modules/ROOT/pages/setup.adoc
+++ b/modules/ROOT/pages/setup.adoc
@@ -27,6 +27,7 @@ Anypoint Visualizer supports the following Mule versions running on CloudHub:
 * Mule version 3.9.1-AM
 * Mule version 4.1.x
 * Mule version 4.1.x-AM
+* Mule version 4.2.x
 
 [NOTE]
 If your version of Mule was released before June 30th 2018, to ensure you have the correct Visualizer agent, upgrade your version of Mule to any of the supported versions listed in this section. You can do this update with zero downtime for CloudHub applications, APIs, and proxies.
@@ -41,6 +42,7 @@ The metrics that Visualizer displays come from Anypoint Monitoring. As a result,
 * Mule 4.1.x.-AM
 * Mule 3.9.x patch releases available on April 5, 2019 or later. To see your app and the related metrics in Visualizer, you must also enable the Monitoring agent after you upgrade as described in the next section. 
 * Mule 4.1.x patch releases available on March 22, 2019 or later. To see your app and the related metrics in Visualizer, you must also enable the Monitoring agent after you upgrade as described in the next section.
+* Mule 4.2.x
 
 === Enable the Monitoring Agent for Mule Version 4.1 Upgrades After March 22, 2019, or Mule Version 3.9 Upgrades After April 5, 2019
 
@@ -70,12 +72,14 @@ Anypoint Visualizer supports the following Mule versions for standalone Mule and
 | Mule standalone 
 a| * Mule 3.8.7
 * Mule 3.9.1+
-* Mule 4.1.1+ +
+* Mule 4.1.x 
+* Mule 4.2.x
 
 | Runtime Fabric
 a| * Mule 3.8.7
 * Mule 3.9.1+
-* Mule 4.1.2+ +
+* Mule 4.1.2+ 
+* Mule 4.2.0
 |===
 
 [NOTE]
@@ -106,18 +110,22 @@ Known Limitations:
 Visualizer requires an additional header injection for standalone Mule and Runtime Fabric deployments.
 However, due to a potential performance impact for Mule 4.1.x, header injection is disabled by default.
 
+Enable the header injection in the Runtime Manager.
+
 [NOTE]
 For Runtime Fabric, you must enable the header injection at the app level. +
-For a standalone Mule deployment, you must enable the header injection at the server, not app, level. This affects all applications running on the server.
+For a standalone Mule deployment, you must enable the header injection at the server (not app) level. This affects all applications running on the server.
 
-Set the following property in either the server (for Mule standalone deployment) or app (for a Runtime Fabric deployment):
-
+. In Runtime Manager, to enable the header injection in the management page,  click *Applications* or *Server* in the menu on the left. 
+.. From the list view, select the hybrid app or server for which to enable the header injection, and click *Manage Application* or *Manage Server*. 
+. To enable the header injection on the deployment page, click *Deploy application*. 
+. Click the *Properties* tab, and set the following property in either the server (for Mule standalone deployment) or app (for a Runtime Fabric deployment): +
 ----
 anypoint.platform.config.analytics.agent.header_injection.disabled=false
 ----
-
++
 [NOTE]
-You must set the property to `false` as shown in the example to enable header injection, since the property is `disabled`.
+You must set the property to `false` as shown in the example to enable header injection, since the property is `disabled` by default.
 
 == Verify Supported Connectors
 
@@ -174,10 +182,10 @@ To reduce the monitoring impact on performance for an app running in CloudHub, d
 
 === Manage Performance for Standalone Mule
 
-Reducing performance impact for an app running in a standalone Mule is done at the server level. You can do one of the following:
+Reduce performance impact for an app running in a standalone Mule at the server level. You can do one of the following:
 
 * Deploy the app to a server that doesn't have the Anypoint Monitoring agent installed.
-* Disable data collection for a specific server. To disable data collection for a server and all the applications deployed to that server, set the following property at the server level:
+* To disable data collection for a specific server and all the applications deployed to that server, set the following property at the server level:
 +
 ----
 anypoint.platform.config.analytics.agent.disabled=true 
