--- a/modules/ROOT/pages/view.adoc
+++ b/modules/ROOT/pages/view.adoc
@@ -13,11 +13,11 @@ Views display your saved filter selection, including:
 * New services deployed that match the selected environments and tags
 * If the *Show dependents and dependencies* option is selected and the a service is deployed and related to a selected service
 
-Views that you have access to appear in a list in the *Contents* card (click the drop-down arrow to see the list). This gives you easy access to all the views that are available to you, and saves you time because you don't need to readjust filters every time you access Visualizer to get the view that is relevant to you.
+Views that you have access to appear in a list in the *View* card (click the drop-down arrow to see the list). This gives you easy access to all the views that are available to you, and saves you time because you don't need to readjust filters every time you access Visualizer to get the view that is relevant to you.
 
 == Defined Views
 
-As a Visualizer editor, you can create views that provide a consistent, high quality source of truth for the architecture of each of your organization's projects. Any Visualizer user who has permission for the included environments can see these auto-discoverable views in a drop-down list in the *Contents* card. Only editors can create, rename, and edit defined views.
+As a Visualizer editor, you can create views that provide a consistent, high quality source of truth for the architecture of each of your organization's projects. Any Visualizer user who has permission for the included environments can see these auto-discoverable views in a drop-down list in the *View* card. Only editors can create, rename, and edit defined views.
 
 These views provide team members with a topological view of the apps that are specific to the areas they are responsible for. Providing a dynamic view for team members ensures their ability to troubleshoot their projects more quickly and easily, and promotes architectural consistency.
 
@@ -43,7 +43,7 @@ Once you save the view, it becomes accessible to other users, meaning that any u
 Users can make changes to their private view's filters, and save them. However, only users with the *Visualizer Editor* permission can edit defined views.
 
 . Make the desired changes to the current filters. +
-An asterisk appears next to the view name until you click *Save* in the *Contents* card.
+An asterisk appears next to the view name until you click *Save* in the *View* card.
 . Click *Save*.
 . (Visualizer editor only) Click *Save as* to save your updates as a new view and preserve the original view.
 +
